<resources>
    <string name="app_name">Rebound Piercing</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_shop">Shop</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_news">News</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_share">Share</string>
    <string name="title_about_us">About Us</string>
    <string name="title_logout">Log Out</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="title_navigation_shop">Shop</string>
    <string name="title_navigation_schedule">Schedule</string>
    <string name="title_navigation_news">News</string>
    <string name="title_navigation_profile">Profile</string>
</resources>