<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/txtNavigationHome"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/title_home"
            />

        <item
            android:id="@+id/txtNavigationSettings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/title_settings"/>

        <item
            android:id="@+id/txtNavigationShare"
            android:icon="@mipmap/ic_share"
            android:title="@string/title_share"/>

        <item
            android:id="@+id/txttxtNavigationAbout"
            android:icon="@drawable/baseline_about_24"
            android:title="@string/title_about_us"/>
    </group>
    <item
        android:id="@+id/txtNavigationLogout"
        android:icon="@drawable/baseline_exit_to_app_24"
        android:title="@string/title_logout"/>
</menu>